@@ -220,6 +220,11 @@ $labels['mdnrequests'] = 'Potwierdzenia odbioru';
 $labels['askuser'] = 'spytaj użytkownika';
 $labels['autosend'] = 'wyślij automatycznie';
 $labels['ignore'] = 'ignoruj';
+$labels['mimeparamfolding'] = 'Nazwy załączników';
+$labels['2231folding'] = 'zgodne z RFC 2231 (Thunderbird)';
+$labels['miscfolding'] = 'zgodne z RFC 2047/2231 (MS Outlook)';
+$labels['2047folding'] = 'zgodne z RFC 2047 (inne)';
+$labels['advancedoptions'] = 'opcje zaawansowane';
 $labels['readwhendeleted'] = 'Podczas usuwania oznacz wiadomość jako przeczytaną';
 $labels['flagfordeletion'] = 'Oznacz wiadomość do usunięcia zamiast ją usuwać';
 $labels['autosavedraft'] = 'Automatyczny zapis tworzonej wiadomości';
